--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -4,7 +4,17 @@
     display: flex;
     justify-content: space-between;
     flex-direction: row;
-    padding: 1rem 4rem;
+    padding: 0 4rem;
+    gap: 2rem;
+}
+
+.navbar-content {
+    width: 100%;
+    padding: 1rem 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    vertical-align: middle;
 }
 
 .navbar-logo {
@@ -32,4 +42,13 @@
     color: #d8d8d8;
     font-size: 1.2rem;
     height: fit-content;
+}
+
+.navbar-image {
+    height: 3rem;
+    margin: auto 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden
 }
