First Footer Push
Most basic footer structure, mising animations and widgets

--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,13 @@
 .app {
   width: 100vw;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  flex-grow: 1;
 }
