General views structure
Every view now has their general  structure done, now the work ahead is to start working on each of these views

--- a/src/components/layout/Navbar.css
+++ b/src/components/layout/Navbar.css
@@ -165,8 +165,8 @@
 /* Smooth focus states for accessibility */
 .navbar-logo:focus,
 .navbar-links a:focus {
-    outline: 2px solid #A3B5A3;
-    outline-offset: 2px;
+    /* outline: 2px solid #A3B5A3;
+    outline-offset: 2px; */
     transition: outline 0.2s ease;
 }
 
